--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <title>SymBNB - {% block title %}Welcome!{% endblock %}</title>
+
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    {% block stylesheets %}{% endblock %}
+</head>
+<body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+    <a class="navbar-brand" href="{{ path('homepage') }}">SymBNB !</a>
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarColor03">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="{{ path('homepage') }}">Accueil</a>
+            </li>
+        </ul>
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a href="#" class="nav-link">Mon compte !</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+
+<script src="{{ asset('js/jquery-3.3.1.slim.min.js') }}"></script>
+<script src={{ asset('js/popper.min.js') }}></script>
+<script src={{ asset('js/bootstrap.min.js') }}></script>
+{% block javascripts %}{% endblock %}
+</body>
 </html>
