section 3 relation avec la bdd correction ds base.html.twig

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>SymBNB - {% block title %}Welcome!{% endblock %}</title>
 
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ asset('/css/bootstrap.min.css') }}">
+
     {% block stylesheets %}{% endblock %}
 </head>
 <body>
@@ -29,11 +30,12 @@
         </ul>
     </div>
 </nav>
+{% block body %}{% endblock %}
 
 
-<script src="{{ asset('js/jquery-3.3.1.slim.min.js') }}"></script>
-<script src={{ asset('js/popper.min.js') }}></script>
-<script src={{ asset('js/bootstrap.min.js') }}></script>
+<script src="{{ asset('/js/jquery-3.3.1.slim.min.js') }}"></script>
+<script src={{ asset('/js/popper.min.js') }}></script>
+<script src={{ asset('/js/bootstrap.min.js') }}></script>
 {% block javascripts %}{% endblock %}
 </body>
 </html>
