--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,6 +5,7 @@
     <title>SymBNB - {% block title %}Welcome!{% endblock %}</title>
 
     <link rel="stylesheet" href="{{ asset('/css/bootstrap.min.css') }}">
+    <link rel="stylesheet" href="{{ asset('/css/app.css') }}">
 
     {% block stylesheets %}{% endblock %}
 </head>
@@ -19,8 +20,10 @@
 
     <div class="collapse navbar-collapse" id="navbarColor03">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="{{ path('homepage') }}">Accueil</a>
+            </li><li class="nav-item">
+                <a class="nav-link" href="{{ path('ads_index') }}">Nos annonces</a>
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
